Fixes nowrap text shinking and adding ellipsys when text goes over container.

--- a/source/sass/components/_utilities.scss
+++ b/source/sass/components/_utilities.scss
@@ -46,6 +46,9 @@ img {
 // text transform
 .nowrap {
   white-space: nowrap;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .upper-case {
